[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-py-wrap"  # Not `dbt-py` to avoid confusion with the DbtPy package (PyPI requirement)
version = "0.0.4"
description = "Python wrapper for dbt-core to extend dbt with custom Python."
readme = "README.md"
authors = [{name = "Bilbottom"}]
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.5.0",
]

[project.scripts]
dbt-py = "dbt_py:main"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=4.1.0",
]
test = [
    "dbt-duckdb>=1.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools]
packages = ["dbt_py"]


[tool.pytest.ini_options]
addopts = "--cov=dbt_py --cov-fail-under=80"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
